--- a/Laboratorio 6/lab6.html
+++ b/Laboratorio 6/lab6.html
@@ -36,6 +36,37 @@
         <p id="longitud" class="invalid">Mínimo <b>8 caracteres</b></p>
     </div>
 
+    <div id="preguntas">
+        <h3>Preguntas</h3>
+        <ul>
+            <li>¿Por qué es una buena práctica usar JavaScript para checar que sean válidos los inputs de las formas 
+                antes de enviar los datos al servidor?</li><br>
+            <p>Porque si el usuario ha cometido algún error al rellenar el formulario, se le puede notificar de forma 
+                instantánea, sin necesidad de esperar la respuesta del servidor</p><br>
+
+            <li>¿Cómo puedes saltarte la seguridad de validaciones hechas con JavaScript?</li><br>
+            <p>Por medio de la consola del desarrollador en nuestro navegador, podemos alterar el código e introducir
+                por ejemplo el comando novalidate="" o formnovalidate="" para saltar estas validacciones. Es decir, esto 
+                puede hacerse con tan solo introducir un par de palabras reservadas en el código html.</p><br>
+
+            <li>Si te puedes saltar la seguridad de las validaciones de JavaScript, entonces ¿por qué la primera 
+                pregunta dice que es una buena práctica?</li><br>
+            <p>Porque no cualquier usuario puede saltarse las validaciones así que para la mayoría de la gente 
+                una validacion en Javascript será suficiente para que no introduzcan datos erroneos, además de 
+                que es muy eficiente hacer la validación del lado del cliente.</p><br>
+        </ul>
+    </div>
+
+    <div id="referencias">
+        <h3>Referencias</h3>
+        <p>How To Create a Password Validation Form. (s.f.). 
+            https://www.w3schools.com/howto/howto_js_password_validation.asp</p><br>
+        <p>uniwebsidad. (s.f.). 7.3. Validación (Introducción a JavaScript). 
+            https://uniwebsidad.com/libros/javascript/capitulo-7/validacion</p><br>
+        <p>A. (2020, 9 diciembre). Cómo saltarse la validación HTML5 de un formulario. 
+            https://didacticode.com/como-saltarse-validacion-html5-formulario/</p><br>
+    </div>
+
     <!--Mandamos a llamar al código en Javascript-->
     <script src="lab6script.js" type="text/Javascript"></script>
 </body>
